# fast_vector_similarity

./: .gitignore  Cargo.toml  README.md  build_wheels.sh  pyproject.toml
.github/workflows/: build-wheels.yml
benches/: benchmark.rs
python/: requirements.txt  vector_similarity_test.py
src/: lib.rs
