[package]
name = "fast_vector_similarity"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
ndarray-linalg = "0.16.0"
ndarray-stats = "0.5.1"
rayon = "1.7.0"
statrs = "0.16.0"
rand = "0.8.5"
serde_json = "1.0.105"
rand_distr = "0.4.3"
pyo3 = { version = "0.19.2", features = ["extension-module"] }

[lib]
crate-type = ["cdylib"]
