[build-system]
requires = ["maturin"]
build-backend = "maturin.maturin_pep517:build"

[project]
name = "fast_vector_similarity"
version = "0.1.0"
description = "Compute various vector similarity metrics in Rust for Python, including bootstrapped/bagged robust estimators."
license = "MIT"
authors = ["Jeffrey Emanuel <jeff@pastel.network>"]
readme = "README.md"
repository = "https://github.com/Dicklesworthstone/fast_vector_similarity"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
